# CMake-App

./: .clang-format  .clang-tidy  .gitignore  .iwyu.imp  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md
apps/app/: CMakeLists.txt  app.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Config.cmake.in  Coverage.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  Package.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
configure_files/: CMakeLists.txt  version.hpp.in
dependencies/: CMakeLists.txt
fuzz_tests/: CMakeLists.txt
fuzz_tests/core_fuzz_test/: CMakeLists.txt  core_fuzz_test.cpp
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/core/include/core/: core.hpp
libraries/core/src/: core.cpp  core_local.cpp  core_local.hpp
tests/: CMakeLists.txt
tests/core_test/: CMakeLists.txt  core_test.cpp
